feat: 🎸 update camketxt and .gdb.init

--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,10 @@ kernelmemfs
 mkfs
 kernel/kernel
 user/usys.S
-.gdbinit
 myapi.key
 *-handin.tar.gz
 xv6.out*
 .vagrant/
 submissions/
+.idea
+cmake-build-debug
